monProjetApex/force-app/main/default/objects/TarifLivraison__c/TarifLivraison__c.object-meta.xml
<CustomObject>
    <label>TarifLivraison</label>
    <nameField>
        <label>TarifLivraison Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TarifLivraisons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>