monProjetApex/force-app/main/default/objects/TarifLivraison__c/fields/delai__c.field-meta.xml
<CustomField>
    <fullName>delai__c</fullName>
    <label>delai</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>