monProjetApex/force-app/main/default/objects/TarifLivraison__c/fields/pays__c.field-meta.xml
<CustomField>
    <fullName>pays__c</fullName>
    <label>pays</label>
    <length>100</length>
    <type>Text</type>
</CustomField>