monProjetApex/force-app/main/default/objects/TarifLivraison__c/fields/prix__c.field-meta.xml
<CustomField>
    <fullName>prix__c</fullName>
    <label>prix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>