monProjetApex/force-app/main/default/objects/TarifLivraison__c/fields/Transporteur__c.field-meta.xml
<CustomField>
    <fullName>Transporteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transporteur</label>
    <referenceTo>Transporteur__c</referenceTo>
    <relationshipLabel>TarifLivraisons</relationshipLabel>
    <relationshipName>TarifLivraisons</relationshipName>
    <type>Lookup</type>
</CustomField>